fix: start bloop with jvm version from using directives for JVMs > 17 (#2972)
* fix: start bloop with jvm version from using directives for JVMs > 17

* test fix

* start bloop with jvm 17 before test